# Gifhub

./: .gitignore  Cargo.toml  README.md  Rocket.toml  justfile  makefile  tsconfig.json
db/: gallery.sqlite
migrations/: 20260223043932_init.sql
public/: context_menu.js  gallery.js  index.html  styles.css  upload.js
src/: errors.rs  gif.hpp  gifhub.cpp  gifhub.hpp  library.cpp  library.hpp  macros.rs  main.cpp  main.rs  reset_files.rs  settings.hpp  sqlite3_utils.hpp  utils.hpp
src/db/: error.rs  gallery_db.rs  gifhub_db.rs  mod.rs  models.rs  repository.rs  schema.rs
src/routes/: delete.rs  mod.rs  nuke_files.rs  reset_files.rs  retrieve.rs  search.rs  tags.rs  upload.rs
src/shaders/: frame.fs  rgb_frame.fs  rounded_frame.fs
src/tinyfiledialogs/: tinyfiledialogs.c
ts/: api.ts  context_menu.ts  gallery.ts  main.ts  modal.ts  nuke.ts  types.ts  upload.ts
